--- a/_posts/2017-05-03-Swift-的懒加载和计算型属性.md
+++ b/_posts/2017-05-03-Swift-的懒加载和计算型属性.md
@@ -13,7 +13,7 @@ tags:
 ---
 
 
-> 本文首次发布于 [BY Blog](http://qiubaiying.github.io), 作者 [@柏荧(BY)](http://github.com/qiubaiying) ,转载请保留原文链接.
+> 本文首次发布于 [BY Blog](http://jianfeizhou.github.io), 作者 [@jianfeizhou(BY)](http://github.com/jianfeizhou) ,转载请保留原文链接.
 
 ### 懒加载
 
